--- a/restaurants/templates/list.html
+++ b/restaurants/templates/list.html
@@ -6,6 +6,7 @@
 <br>
 <div class="row">
     {% for restaurant in restaurants %}
+    {{restaurant.items.all}}
     <div class="col-md-4">
         <div class="card my-card">
           {% if restaurant.logo %}
